--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,7 +83,7 @@ body {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground border-8;
   }
   .dark body {
     background-image: linear-gradient(to bottom right, hsl(var(--background)), hsl(225, 30%, 15%));
