--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,24 +4,24 @@
 @tailwind utilities;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 240 10% 99%;
     --foreground: 224 71.4% 4.1%;
     --card: 0 0% 100%;
     --card-foreground: 224 71.4% 4.1%;
     --popover: 0 0% 100%;
     --popover-foreground: 224 71.4% 4.1%;
-    --primary: 220 90% 50%;
+    --primary: 275 80% 50%;
     --primary-foreground: 210 20% 98%;
     --secondary: 220 14.3% 95.9%;
     --secondary-foreground: 220 9.1% 43.1%;
     --muted: 220 14.3% 95.9%;
     --muted-foreground: 220 8.9% 46.1%;
-    --accent: 220 14.3% 95.9%;
+    --accent: 250 80% 60%;
     --accent-foreground: 220 9.1% 43.1%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 20% 98%;
@@ -37,25 +37,25 @@ body {
   }
 
   .dark {
-    --background: 222 84% 4.9%;
+    --background: 240 10% 3.9%;
     --foreground: 210 20% 98%;
-    --card: 222 84% 4.9%;
+    --card: 240 4% 15% / 0.15;
     --card-foreground: 210 20% 98%;
     --popover: 222 84% 4.9%;
     --popover-foreground: 210 20% 98%;
-    --primary: 217 91% 60%;
+    --primary: 275 92% 60%;
     --primary-foreground: 210 20% 98%;
     --secondary: 215 28% 17%;
     --secondary-foreground: 210 20% 98%;
-    --muted: 215 28% 17%;
+    --muted: 215 28% 17% / 0.5;
     --muted-foreground: 218 11% 65%;
-    --accent: 215 28% 17%;
+    --accent: 250 80% 70%;
     --accent-foreground: 210 20% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 20% 98%;
-    --border: 215 28% 17%;
+    --border: 215 28% 17% / 0.5;
     --input: 215 28% 17%;
-    --ring: 217 91% 60%;
+    --ring: 275 91% 60%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
@@ -70,5 +70,8 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+  }
+  .dark body {
+    background-image: linear-gradient(to bottom right, hsl(240 10% 3.9%), hsl(280 15% 10%));
   }
 }
